--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -30,6 +30,24 @@
 			<trans-unit id="tx_l10ntranslator_domain_model_search.l10nFile">
 				<source>l10nFile</source>
 			</trans-unit>
+			<trans-unit id="tx_l10ntranslator_domain_model_search.caseInSensitive">
+				<source>Case InSensitive</source>
+			</trans-unit>
+			<trans-unit id="tx_l10ntranslator_domain_model_search.exactMatch">
+				<source>Exact Match</source>
+			</trans-unit>
+			<trans-unit id="tx_l10ntranslator_domain_model_search.includeSource">
+				<source>Include Source</source>
+			</trans-unit>
+			<trans-unit id="search.heading">
+				<source>Search</source>
+			</trans-unit>
+			<trans-unit id="search.extendedParameters">
+				<source>extended Parameters</source>
+			</trans-unit>
+			<trans-unit id="search.all">
+				<source>All</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
