--- a/Tests/Fixtures/Extensions/demo/Resources/Private/Language/it.locallang.xlf
+++ b/Tests/Fixtures/Extensions/demo/Resources/Private/Language/it.locallang.xlf
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-06-02T11:47:10Z" product-name="demo">
+	<file target-language="it" datatype="plaintext" original="messages" date="2014-06-02T11:47:10Z" product-name="demo">
 		<header/>
 		<body>
 			<trans-unit id="search-start" xml:space="preserve">
 				<source>orig string</source>
-				<target>orig string</target>
+				<target>translated string</target>
 			</trans-unit>
 		</body>
 	</file>
