--- a/Tests/Fixtures/Extensions/demo/Resources/Private/Language/fr.locallang.xlf
+++ b/Tests/Fixtures/Extensions/demo/Resources/Private/Language/fr.locallang.xlf
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file target-language="fr" datatype="plaintext" original="messages" date="2014-06-02T11:47:10Z" product-name="demo">
-		<header/>
-		<body>
-			<trans-unit id="search-start" xml:space="preserve">
-				<target>translated string</target>
-			</trans-unit>
-		</body>
-	</file>
+  <file target-language="fr" datatype="plaintext" original="messages" date="2014-06-02T11:47:10Z" product-name="demo">
+    <header/>
+    <body>
+      <trans-unit id="search-start">
+        <target>translated string</target>
+      </trans-unit>
+    </body>
+  </file>
 </xliff>
